--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "axios": "^1.3.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
